likes work. trying to fix comment submit button by adding z-index.

--- a/resources/sass/pages/_all-posts.scss
+++ b/resources/sass/pages/_all-posts.scss
@@ -301,6 +301,7 @@
             position: absolute;
             top: -42px;
             right: 0px;
+            z-index: 100;
 
             i {
               font-size: 1.2rem;
